[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/session/card_button.gd" type="Script" id=1]

[node name="CardButton" type="Button"]
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -7.0
margin_right = 65.0
margin_bottom = 7.0
size_flags_vertical = 6
text = "Card label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="ToolButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -47.0
margin_top = -27.0
margin_right = -5.0
margin_bottom = -5.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousButton" type="ToolButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -27.0
margin_right = 67.0
margin_bottom = -5.0
text = "Previous"

[connection signal="pressed" from="NextButton" to="." method="_next_variant"]
[connection signal="pressed" from="PreviousButton" to="." method="_previous_variant"]
